--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     </div>
     <main>
         <h3>main</h3>
+        <h3>Dashboard</h3>
+        <div class="flexbox">
+            <span class="item"> cup</span>
+            <span class="item">shoe</span>
+            <span class="item">spoon</span>
+        </div>
     </main>
     <footer>
         <h3>Developers In Vogue </h3>
