--- a/figma_form/index.html
+++ b/figma_form/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="sidebar">
-        <img class="logo" src="/assets/logo.jpg" alt="logo" />
+        <img class="logo" src="/center_div/assets/logo.jpg" alt="logo" />
         <div class="icons">
           <span class="material-icons-outlined"> home </span>
           <span class="material-icons-outlined"> notifications </span>
@@ -55,7 +55,7 @@
       <div class="main">
         <header>
             <h1>Edit Profile</h2>
-            <img src="/assets/profilepic.png" alt="Profile Picture" class="image">
+            <img src="/center_div/assets/profilepic.png" alt="Profile Picture" class="image">
         </header>
         <form action="/action_page.php">
             <div class="name">
@@ -106,7 +106,7 @@
                 <label for="pwd">Password:</label>
                 <input type="password" class="form-control" id="pwd">
               </div>
-              <button type="submit" class="btn btn-default">Submit</button>
+              <button type="submit" class="btn btn-default">Save</button>
             </form>
 
         
