--- a/profile_form/index.html
+++ b/profile_form/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Profile</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <div class="content">
+        <div class="header">Header</div>
+        <div class="aside">
+          <div class="details"></div>
+          <div class="edit_profile">
+            <form action="/action_page.php">
+                <div class="name">
+                    <div class="form-group">
+                        <label>First Name</label>
+                        <input type="text" class="form-control" id="fname">
+                    </div>
+                    <div class="form-group">
+                        <label>Last Name</label>
+                        <input type="email" class="form-control" id="lname">
+                    </div>
+                </div>
+                <div class="form-group">
+                  <label for="email">Email address:</label>
+                  <input type="text" class="form-control" id="email">
+                </div>
+                <div class="form-group">
+                    <label for="address">Address</label>
+                    <input type="text" class="form-control" id="address">
+                  </div>
+                  <div class="form-group">
+                    <label for="number">Contact Number</label>
+                    <input type="text" class="form-control" id="contact">
+                  </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
