--- a/profile_form/index.html
+++ b/profile_form/index.html
@@ -13,29 +13,30 @@
         <div class="aside">
           <div class="details"></div>
           <div class="edit_profile">
-            <form action="/action_page.php">
+            <form class="form">
                 <div class="name">
                     <div class="form-group">
                         <label>First Name</label>
-                        <input type="text" class="form-control" id="fname">
+                        <input type="text" class="form-control" id="fname" placeholder="First Name">
                     </div>
                     <div class="form-group">
                         <label>Last Name</label>
-                        <input type="email" class="form-control" id="lname">
+                        <input type="email" class="form-control" id="lname" placeholder="Last Name">
                     </div>
                 </div>
                 <div class="form-group">
-                  <label for="email">Email address:</label>
-                  <input type="text" class="form-control" id="email">
+                  <label for="email">School</label>
+                  <input type="text" class="form-control" id="email" placeholder="School">
                 </div>
                 <div class="form-group">
-                    <label for="address">Address</label>
-                    <input type="text" class="form-control" id="address">
+                    <label for="address">Email</label>
+                    <input type="text" class="form-control" id="address" placeholder="Email">
                   </div>
                   <div class="form-group">
-                    <label for="number">Contact Number</label>
-                    <input type="text" class="form-control" id="contact">
+                    <label for="number">Emergency Contact</label>
+                    <input type="text" class="form-control" id="contact" placeholder="Contact">
                   </div>
+                  <button type="submit">Submit</button>
           </div>
         </div>
       </div>
